--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Avatar Musik Designs - Ngọc Chi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Avatar Musik Designs</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f9f9f9;
+    }
+    h1 {
+      margin: 20px;
+      color: #333;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: transform 0.2s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-  <h1>Thiết kế Trang phục Game Avatar Musik</h1>
-  <p>Bộ sưu tập thiết kế tham dự cuộc thi (01/2025)</p>
+  <h1>Bộ sưu tập thiết kế Avatar Musik</h1>
   <div class="gallery">
-    <img src="muadong.jpg" alt="Giải nhất kế đông 2025 game Avatar musik">
+   <img src="muadong.jpg" alt="Giải nhất kế đông 2025 game Avatar musik">
     <img src="muadongxanh.jpg" alt="Giải yêu thích thiết kế đông 2025 game Avatar musik">
     <img src="muaxuan.jpg" alt="Giải nhất thiết kế xuân 2025 game Avatar musik">
     <img src="muahong.jpg" alt="Giải nhì thiết kế xuân 2025 game Avatar musik">
