--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
    <img src="muadong.jpg" alt="Giải nhất kế đông 2025 game Avatar musik">
     <img src="muadongxanh.jpg" alt="Giải yêu thích thiết kế đông 2025 game Avatar musik">
     <img src="muaxuan.jpg" alt="Giải nhất thiết kế xuân 2025 game Avatar musik">
-    <img src="muahong.jpg" alt="Giải nhì thiết kế xuân 2025 game Avatar musik">
+    <img src="xuanhong.jpg" alt="Giải nhì thiết kế xuân 2025 game Avatar musik">
     <img src="he.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik">
     <img src="hecuu.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik">
   </div>
 </body>
 </html>
+
