--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avatar Musik Designs</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       background: #f9f9f9;
+      margin: 0;
+      padding: 0;
     }
     h1 {
       margin: 20px;
@@ -20,31 +21,127 @@
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       padding: 20px;
+      max-width: 1200px;
+      margin: auto;
     }
-    .gallery img {
-      width: 100%;
-      height: auto;
+    figure {
+      background: #fff;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      overflow: hidden;
+      margin: 0;
+      cursor: pointer;
       transition: transform 0.2s;
     }
-    .gallery img:hover {
-      transform: scale(1.05);
+    figure:hover {
+      transform: scale(1.03);
+    }
+    figure img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    figcaption {
+      padding: 10px;
+      font-size: 14px;
+      color: #444;
+      background: #f0f0f0;
+      border-top: 1px solid #ddd;
+    }
+
+    /* Lightbox */
+    .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+    }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 10px;
+    }
+    .lightbox:target {
+      display: flex;
+    }
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      color: #fff;
+      font-size: 30px;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>Bộ sưu tập thiết kế Avatar Musik</h1>
   <div class="gallery">
-   <img src="muadong.jpg" alt="Giải nhất kế đông 2025 game Avatar musik">
-    <img src="muadongxanh.jpg" alt="Giải yêu thích thiết kế đông 2025 game Avatar musik">
-    <img src="muaxuan.jpg" alt="Giải nhất thiết kế xuân 2025 game Avatar musik">
-    <img src="xuan.jpg" alt="Giải nhì thiết kế xuân 2025 game Avatar musik">
-    <img src="xuanhong.jpg" alt="Giải yêu thích thiết kế xuân 2025 game Avatar musik">
-    <img src="he.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik">
-    <img src="hecuu.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik">
+    <figure>
+      <a href="#img1"><img src="muadong.jpg" alt="Giải nhất thiết kế đông 2025 game Avatar musik"></a>
+      <figcaption>Giải nhất thiết kế đông 2025</figcaption>
+    </figure>
+    <figure>
+      <a href="#img2"><img src="muadongxanh.jpg" alt="Giải yêu thích đông 2025 game Avatar musik"></a>
+      <figcaption>Giải yêu thích đông 2025</figcaption>
+    </figure>
+    <figure>
+      <a href="#img3"><img src="muaxuan.jpg" alt="Giải nhất thiết kế xuân 2025 game Avatar musik"></a>
+      <figcaption>Giải nhất thiết kế xuân 2025</figcaption>
+    </figure>
+    <figure>
+      <a href="#img4"><img src="xuan.jpg" alt="Giải nhì thiết kế xuân 2025 game Avatar musik"></a>
+      <figcaption>Giải nhì thiết kế xuân 2025</figcaption>
+    </figure>
+    <figure>
+      <a href="#img5"><img src="xuanhong.jpg" alt="Giải yêu thích xuân 2025 game Avatar musik"></a>
+      <figcaption>Giải yêu thích xuân 2025</figcaption>
+    </figure>
+    <figure>
+      <a href="#img6"><img src="he.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik"></a>
+      <figcaption>Giải ba thiết kế hè 2024</figcaption>
+    </figure>
+    <figure>
+      <a href="#img7"><img src="hecuu.jpg" alt="Giải ba thiết kế hè 2024 game Avatar musik"></a>
+      <figcaption>Thiết kế hè 2024</figcaption>
+    </figure>
+  </div>
+
+  <!-- Lightbox cho từng ảnh -->
+  <div id="img1" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="muadong.jpg" alt="">
+  </div>
+  <div id="img2" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="muadongxanh.jpg" alt="">
+  </div>
+  <div id="img3" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="muaxuan.jpg" alt="">
+  </div>
+  <div id="img4" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="xuan.jpg" alt="">
+  </div>
+  <div id="img5" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="xuanhong.jpg" alt="">
+  </div>
+  <div id="img6" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="he.jpg" alt="">
+  </div>
+  <div id="img7" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="hecuu.jpg" alt="">
   </div>
 </body>
 </html>
-
-
